# TaxSalesValidator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL_SUCCESS.md  PLAN.md  README.md  SETUP.md  analyze_cuf.py  check_observations.py  copilot-instructions.md  diagnose_missing_rows.py  pyproject.toml  test_db_connection.py  test_sas_connection.py  test_sas_mapper.py  verify_november_observations.py  verify_observations.py
context/examples/: codegen-flujo.ts
data/processed/sales_20251006_095431/: archivoVentas.csv
docs/: ATOMIC_TRANSACTIONS_EXPLAINED.md  COMMIT_SUMMARY.md  CUF_IMPLEMENTATION_SUMMARY.md  CUF_PROCESSING.md  DELIVERY.md  INVENTORY_INTEGRATION.md  INVENTORY_SETUP_COMPLETE.md  OUTPUT_SIMPLIFICATION.md  PHASE5_COMPLETE.md  PHASE5_RESUMEN_ESPAÑOL.md  PHASE6_COMPLETE.md  PHASE7_ACCOUNTING_SYNC_PLAN.md  PHASE7_COMPLETE.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_RESUMEN_ESPANOL.md  QUICKSTART_CUF.md  RESUMEN_CAMBIOS_ES.md  SUCCESS_REPORT.md  UPDATE_SUMMARY.md
docs/examples/: ConsultasContribuyente.html  RegistrarVentas.html  codegen-flujo.ts
src/: __init__.py  config.py  data_processor.py  file_manager.py  inventory_connector.py  main.py  main_backup.py  sales_processor.py  sales_validator.py  sas_connector.py  sas_mapper.py  sas_syncer.py  web_scraper.py
tests/: __init__.py
